Fix Windows scrollbar issue with scrollbar-gutter: stable

--- a/src/styles.css
+++ b/src/styles.css
@@ -70,6 +70,7 @@ html {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scrollbar-gutter: stable;
 }
 
 body {
